--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="align-middle">
               <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
               Discover all over the world at Same Cost
-              <img src="discover world.webp" alt="">
+              <img src="discover world.webp">
 
               </h3>
               </p>
