--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             id="navAction"
             class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
           >
+          <div style="color: #d53369;">
          Login
+        </div>
           </button>
         </div>
       </div>
@@ -137,7 +139,7 @@
     <section class="bg-white border-b py-8">
       <div class="container mx-auto flex flex-wrap pt-4 pb-12">
         <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-          hello
+          Services
         </h2>
         <div class="w-full mb-4">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
@@ -146,65 +148,66 @@
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
             <a href="#" class="flex flex-wrap no-underline hover:no-underline">
               <p class="w-full text-gray-600 text-xs md:text-sm px-6">
-                xGETTING STARTED
+              <div style="max-width: 80%;">
+               <img src="./images/ATM -service.png" alt="">
+              </div>
               </p>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                hello
+              ATM
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
+                ATMs of different banks at airports are in various areas throughout the terminals and landsides to ensure easy access to cash. 
+                Airports like Sardar Vallabhbhai Patel International Airport (Ahmedabad), Thiruvananthapuram International Airport (Thiruvananthapuram), 
+                Mangaluru International Airport (Mangaluru), Chaudhary Charan Singh International Airport (Lucknow),
+                and Lokpriya Gopinath Bordoloi International Airport (Guwahati) have ATMs at convenient locations. 
+              </p>
+            </a>
+          </div>
+           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadowp-6">
+          </div>
+        </div>
+        <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
+          <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
+            <div style="max-width: 80%;">
+            <img src="./images/Baby Care- rooms.png">
+          </div>
+              </p>
+              <div class="w-full font-bold text-xl text-gray-800 px-6">
+                Baby Care Rooms
+              </div>
+              <p class="text-gray-800 text-base px-6 mb-5">
+                Travelling with your young ones can be both exciting and challenging. To address your needs, 
+                we have well-equipped baby care rooms with changing and feeding facilities so that you can take care of your young ones in privacy.
+                Well-equipped baby care rooms with resources like seating facility and diaper changing tables are available at Sardar Vallabhbhai 
+                Patel International Airport (Ahmedabad), Thiruvananthapuram International Airport (Thiruvananthapuram),  Jaipur International Airport, (Jaipur), 
+                Mangaluru International Airport (Managluru), Chaudhary Charan Singh International Airport (Lucknow), and  Lokpriya Gopinath Bordoloi  International Airport (Guwahati).
+                 So, fret not if your baby gets cranky at the airport; you have a go-to place to take care of your little one
               </p>
             </a>
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
-            <div class="flex items-center justify-start">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                Login
-              </button>
-            </div>
+            
           </div>
         </div>
         <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
             <a href="#" class="flex flex-wrap no-underline hover:no-underline">
-              <p class="w-full text-gray-600 text-xs md:text-sm px-6">
-                xGETTING STARTED
-              </p>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
-                Lorem ipsum dolor sit amet.
+                <div style="max-width:80%;">
+                <img src="./images/Medical Centre.png" alt="">
+              </div>
+              Medical Services
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
-              </p>
-            </a>
-          </div>
-          <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
-            <div class="flex items-center justify-center">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                Action
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
-          <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-            <a href="#" class="flex flex-wrap no-underline hover:no-underline">
-              <p class="w-full text-gray-600 text-xs md:text-sm px-6">
-                xGETTING STARTED
-              </p>
-              <div class="w-full font-bold text-xl text-gray-800 px-6">
-                hello
-              </div>
-              <p class="text-gray-800 text-base px-6 mb-5">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
+                Medical centres at our airports are well-equipped with doctors, paramedics, and ICU ambulances to attend to any medical emergencies. 
+                These medical centres are available at Sardar Vallabhbhai Patel International Airport (Ahmedabad), Thiruvananthapuram International Airport (Thiruvananthapuram),
+                 Jaipur International Airport (Jaipur), 
+                Chaudhary Charan Singh International Airport (Lucknow), and Lokpriya Gopinath Bordoloi International Airport (Guwahati). 
               </p>
             </a>
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-end">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                Action
-              </button>
             </div>
           </div>
         </div>
@@ -310,16 +313,16 @@
     </svg>
     <section class="container mx-auto text-center py-6 mb-12">
       <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">
-        Call to Action
+        Download The App
       </h2>
+      <div style="max-width: 250px;margin-left: 41%;">
+      <img src="./images/QR code.webp">
+    </div> 
       <div class="w-full mb-4">
         <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
       </div>
-      <h3 class="my-4 text-3xl leading-tight">
-        Main Hero Message to sell yourself!
-      </h3>
       <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-        Action!
+        Download
       </button>
     </section>
   
